--- a/public/login.html
+++ b/public/login.html
@@ -2,7 +2,7 @@
 <html lang="en" ng-app="loginToApp">
 <head>
   <meta charset="utf-8">
-  <title>Yara Change Management</title>
+  <title>Change Management</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="">
   <meta name="author" content="">
@@ -40,7 +40,7 @@
       <div class="col-md-12 column">
 	<div class="jumbotron">
 	  <h1>
-	    Yara Change Management
+	    Change Management
 	  </h1>
 	</div>
 	<div class="row clearfix">
