--- a/public/app.html
+++ b/public/app.html
@@ -12,9 +12,9 @@
   
   <!--append ‘#!watch’ to the browser URL, then refresh the page. -->
 
-  <link href="css/bootstrap.min.css" rel="stylesheet">
-  <link href="css/bootstrap-theme.min.css" rel="stylesheet">
-  <link href="css/style.css" rel="stylesheet">
+  <link href="/css/bootstrap.min.css" rel="stylesheet">
+  <link href="/css/bootstrap-theme.min.css" rel="stylesheet">
+  <link href="/css/style.css" rel="stylesheet">
 
   <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
   <!--[if lt IE 9]>
@@ -22,18 +22,19 @@
       <![endif]-->
 
   <!-- Fav and touch icons -->
-  <link rel="apple-touch-icon-precomposed" sizes="144x144" href="img/apple-touch-icon-144-precomposed.png">
-  <link rel="apple-touch-icon-precomposed" sizes="114x114" href="img/apple-touch-icon-114-precomposed.png">
-  <link rel="apple-touch-icon-precomposed" sizes="72x72" href="img/apple-touch-icon-72-precomposed.png">
-  <link rel="apple-touch-icon-precomposed" href="img/apple-touch-icon-57-precomposed.png">
-  <link rel="shortcut icon" href="img/favicon.png">
+  <link rel="apple-touch-icon-precomposed" sizes="144x144" href="/img/apple-touch-icon-144-precomposed.png">
+  <link rel="apple-touch-icon-precomposed" sizes="114x114" href="/img/apple-touch-icon-114-precomposed.png">
+  <link rel="apple-touch-icon-precomposed" sizes="72x72" href="/img/apple-touch-icon-72-precomposed.png">
+  <link rel="apple-touch-icon-precomposed" href="/img/apple-touch-icon-57-precomposed.png">
+  <link rel="shortcut icon" href="/img/favicon.png">
 
-  <script type="text/javascript" src="js/libs/jquery.min.js"></script>
-  <script type="text/javascript" src="js/libs/bootstrap.min.js"></script>
-  <script type="text/javascript" src="js/libs/angular.js"></script>
-  <script type="text/javascript" src="js/libs/angular-modal-service.min.js"></script> 
-  <script type="text/javascript" src="js/app.js"></script>
-  <script type="text/javascript" src="controllers/stdForm.js"></script>
+  <script type="text/javascript" src="/js/libs/jquery.min.js"></script>
+  <script type="text/javascript" src="/js/libs/bootstrap.min.js"></script>
+  <script type="text/javascript" src="/js/libs/angular.js"></script>
+  <script type="text/javascript" src="/js/libs/angular-modal-service.min.js"></script> 
+  <script type="text/javascript" src="/js/app.js"></script>
+  <script type="text/javascript" src="/controllers/stdForm.js"></script>
+  <script type="text/javascript" src="/app/components/form/formDirective.js"></script>  
 
   <style type="text/css" media="screen">
     .top-buffer { margin-top:15px; }
