Minor fixes to previous commit

--- a/public/login.html
+++ b/public/login.html
@@ -31,7 +31,11 @@
   <script type="text/javascript" src="js/libs/jquery.min.js"></script>
   <script type="text/javascript" src="js/libs/bootstrap.min.js"></script>
   <script type="text/javascript" src="js/libs/angular.js"></script>
+  
+  <!-- Modules -->
   <script type="text/javascript" src="js/login.js"></script>
+  
+  
 </head>
 
 <body ng-controller="loginCtrl">
