--- a/public/app.html
+++ b/public/app.html
@@ -28,14 +28,17 @@
   <link rel="apple-touch-icon-precomposed" href="/img/apple-touch-icon-57-precomposed.png">
   <link rel="shortcut icon" href="/img/favicon.png">
 
+  <!-- LIBS -->
   <script type="text/javascript" src="/js/libs/jquery.min.js"></script>
   <script type="text/javascript" src="/js/libs/bootstrap.min.js"></script>
   <script type="text/javascript" src="/js/libs/angular.js"></script>
   <script type="text/javascript" src="/js/libs/angular-modal-service.min.js"></script> 
+
+  <!-- Modules -->
   <script type="text/javascript" src="/js/app.js"></script>
   <script type="text/javascript" src="/controllers/stdForm.js"></script>
   <script type="text/javascript" src="/app/components/form/formDirective.js"></script>  
-
+  <script type="text/javascript" src="/app/components/form/formService.js"></script>
   <style type="text/css" media="screen">
     .top-buffer { margin-top:15px; }
   </style>
