--- a/public/app.html
+++ b/public/app.html
@@ -62,8 +62,7 @@
   -->
 
 	<!-- Bootstrap site test modal ** START ** -->
-
-	<!-- Modal -->
+  <!-- Modal -->
 	<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
 	  <div class="modal-dialog" role="document">
 	    <div class="modal-content">
@@ -72,6 +71,8 @@
 	        <h4 class="modal-title" id="myModalLabel">Modal title</h4>
 	      </div>
 	      <div class="modal-body">
+          <peek-form-directive></peek-form-directive>
+          
           <render-form></render-form>
         </div>
 	      <div class="modal-footer">
