--- a/public/app.html
+++ b/public/app.html
@@ -63,16 +63,14 @@
 
 	<!-- Bootstrap site test modal ** START ** -->
   <!-- Modal -->
-	<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
-	  <div class="modal-dialog" role="document">
+	<div class="modal fade bs-example-modal-lg" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+	  <div class="modal-dialog modal-lg" role="document">
 	    <div class="modal-content">
 	      <div class="modal-header">
 	        <button type="button" class="close" data-dismiss="modal" aria-label="Close"></button>
 	        <h4 class="modal-title" id="myModalLabel">Modal title</h4>
 	      </div>
 	      <div class="modal-body">
-          <peek-form-directive></peek-form-directive>
-          
           <render-form></render-form>
         </div>
 	      <div class="modal-footer">
